--- a/views/board.html
+++ b/views/board.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome to HyperDev!</title>
-    <meta name="description" content="A cool thing made with HyperDev">
+    <title> Board Page </title>
     <link id="favicon" rel="icon" href="https://hyperdev.com/favicon-app.ico" type="image/x-icon">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,16 +13,18 @@
       <h1 id='boardTitle'></h1>
     </header>
     
-    <div id='submitNewThread'>
+    <div id='submitNewThread'  class="main-container">
+      <div class="container">
       <h3>Submit a new thread:</h3>
       <form id="newThread" method="post" action="/api/">
-        <textarea rows="8" cols="120" type='text' placeholder='Thread text...' name='text' required=''></textarea><br>
+        <textarea rows="10" cols="80" type='text' placeholder='Thread text...' name='text' required=''></textarea><br>
         <input type='text' placeholder='password to delete' name='delete_password' required=''><br>
         <input type="submit" value="Submit">
       </form>
+      </div>
     </div>
     
-    <div id='boardDisplay'></div>
+    <div id='boardDisplay' class="container "> </div>
     
     <hr style='margin: 50px; margin-top: 200px'>
     
@@ -46,7 +47,6 @@
             // THIS IS NOT WHAT IT WOULD LOOK LIKE TO GO LIVE
             //
             data.forEach(function(ele) {
-              console.log(ele);//can I use typeScript please?!
               var thread = ['<div class="thread">'];
               thread.push('<div class="main">')
               thread.push('<p class="id">id: '+ele._id+' ('+ele.created_on+')</p>');
@@ -56,7 +56,7 @@
               thread.push('</div><div class="replies">');
               var hiddenCount = ele.replycount - 3;
               if (hiddenCount < 1) { hiddenCount = 0 };
-              thread.push('<h5>'+ele.replycount+' replies total ('+hiddenCount+' hidden)- <a href="'+window.location.pathname+ele._id+'">See the full thread here</a>.</h5>');
+              thread.push('<h5> <a href="'+window.location.pathname+ele._id+'">See the full thread here</a>.</h5>');
               ele.replies.forEach(function(rep) {
                 thread.push('<div class="reply">')
                 thread.push('<p class="id">id: '+rep._id+' ('+rep.created_on+')</p>');
